--- a/myproject/docker-compose.yml
+++ b/myproject/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - mongo_data:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     environment:
-      MONGO_INITDB_DATABASE: transport_dbb
+      MONGO_INITDB_DATABASE: transport_db
 
   mqtt_broker:
     image: eclipse-mosquitto
@@ -39,10 +39,9 @@ services:
       context: .
       dockerfile: Dockerfile.locust
     ports:
-      - "8089:8089"  # Expose Locust web interface
+      - "8089:8089"
     depends_on:
-      - middleware  # Ensure the middleware is up before testing
-
+      - middleware
 
   passenger_emulator:
     build:
@@ -80,5 +79,25 @@ services:
     volumes:
       - ./sensor_emulators:/app
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+  
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+    volumes:
+      - grafana_data:/var/lib/grafana
+
 volumes:
   mongo_data:
+  grafana_data:
