🙈  update git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ myproject/middleware/__pycache__/config.cpython-38.pyc
 myproject/middleware/api/__pycache__/routes.cpython-38.pyc
 myproject/middleware/services/__pycache__/db_handler.cpython-38.pyc
 myproject/middleware/services/__pycache__/sensor_handler.cpython-38.pyc
+myproject/middleware/__pycache__/config.cpython-38.pyc
+myproject/middleware/api/__pycache__/routes.cpython-38.pyc
+myproject/middleware/services/__pycache__/db_handler.cpython-38.pyc
+myproject/middleware/services/__pycache__/sensor_handler.cpython-38.pyc
+myproject/sensor_emulators/__pycache__/bus.cpython-38.pyc
